--- a/client/src/footer.css
+++ b/client/src/footer.css
@@ -1,5 +1,7 @@
 .background {
     position: relative;
+    max-width: 100%;
+    overflow-x: hidden;
 
 }
 
